--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/LingDong-/psvg#readme",
   "devDependencies": {
+    "@types/estree": "0.0.45",
     "@types/node": "^14.14.8",
     "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
